Display in local time

--- a/index.html
+++ b/index.html
@@ -34,13 +34,19 @@
 			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/hours">Recent hours</a></li>
 			    </ul>
 			</div>
-
-
-
-			 
-			 
-			
 		</div>
+
+
+		<div id="menu"> 
+			<div class="pure-menu pure-menu-horizontal">
+			    <ul class="pure-menu-list">
+			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/coins">Select coins</a></li>
+			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/exchange">Select exchange</a></li>
+			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/about">About</a></li>
+			    </ul>
+			</div>
+		</div>
+
 
 		<div id="graph"></div>
 
