Rely on cash for fast coinlist

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   </section-->
 
 
-		<div id="loading"></div>
+		<div id="loading" class="no-print"></div>
 
 
-		<div id="timeframe"> 
+		<div id="timeframe" class="no-print"> 
 
 			<div class="pure-menu pure-menu-horizontal">
 			    <ul class="pure-menu-list">
@@ -37,10 +37,10 @@
 		</div>
 
 
-		<div id="menu"> 
+		<div id="menu" class="no-print" hidden> 
 			<div class="pure-menu pure-menu-horizontal">
 			    <ul class="pure-menu-list">
-			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/coins">Select coins</a></li>
+			        <li class="pure-menu-item"><a class="pure-button button-pink" href="#!/coins">Select coins</a></li>
 			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/exchange">Select exchange</a></li>
 			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/about">About</a></li>
 			    </ul>
