--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<title>CryptoFiddle.com</title>
+		<title>CryptoFiddle.com - How did your crypto performe?</title>
     <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css"-->
  		<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
  		<link rel="stylesheet" href="style.css" type="text/css">
@@ -23,6 +23,7 @@
 
 
 		<div id="loading" class="no-print"></div>
+		<h1 id="tagline" class="no-print">How did your crypto performe?</h1>
 
 
 		<div id="timeframe" class="no-print"> 
@@ -37,7 +38,7 @@
 		</div>
 
 
-		<div id="menu" class="no-print" hidden> 
+		<div id="menu" class="no-print"> 
 			<div class="pure-menu pure-menu-horizontal">
 			    <ul class="pure-menu-list">
 			        <li class="pure-menu-item"><a class="pure-button button-pink" href="#!/coins">Select coins</a></li>
