--- a/index.html
+++ b/index.html
@@ -41,10 +41,20 @@
 		<div id="menu" class="no-print"> 
 			<div class="pure-menu pure-menu-horizontal">
 			    <ul class="pure-menu-list">
-			        <li class="pure-menu-item"><a class="pure-button button-pink" href="#!/coins">Select coins</a></li>
-			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/exchange">Select exchange</a></li>
+			        <!--li class="pure-menu-item"><a class="pure-button button-pink" href="#!/coins">Select coins</a></li>
+			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/exchange">Select exchange</a></li-->
 			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/about">About</a></li>
 			    </ul>
+			</div>
+		</div>
+
+		<div id="modal-about" class="sidenav">
+			<a href="#" class="closebtn">&times;</a>
+			<div>
+				<h1>About</h1>
+				<p>Cryptofiddle will help you see the development of crypto coins relative to each other.</p>
+				<p>Data kindly contributed by <a href="https://cryptocompare.com" target="_blank">cryptocompare.com</a></p>
+				<p>If you can see a possible improvement please dont be shy and provide a pull request for the <a href="https://github.com/mathiasrw/cryptofiddle" target="_blank">project repo on Github</a></p>
 			</div>
 		</div>
 
