--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 		<div id="loading" class="no-print"></div>
-		<h1 id="tagline" class="no-print">How did your crypto performe?</h1>
+		<h1 id="tagline" class="no-print">How did your crypto perform?</h1>
 
 
 		<div id="timeframe" class="no-print"> 
