--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<title>CryptoFiddle.com - How did your crypto performe?</title>
+		<title>CryptoFiddle.com - How did your crypto perform?</title>
     <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css"-->
  		<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
  		<link rel="stylesheet" href="style.css" type="text/css">
