--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -1,55 +1,73 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<title>CryptoFiddle.com - How did your cryptocoins perform?</title>
- 		<link rel="stylesheet" href="../node_modules/purecss/build/pure.css">
- 		<link rel="stylesheet" href="style.css" type="text/css">
-	</head>
-	<body>
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<title>CryptoFiddle.com - How did your crypto-coins perform?</title>
+	<link rel="stylesheet" href="../node_modules/purecss/build/pure.css">
+	<link rel="stylesheet" href="style/style.scss" type="text/css">
+</head>
+
+<body>
 
 
 
-		<div id="loading" class="no-print"></div>
-		<h1 id="tagline" class="no-print">How did your crypto perform?</h1>
+	<div id="loading" class="no-print"></div>
 
+	<h1 id="tagline" class="no-print">How did your crypto-coins perform?</h1>
 
-		<div id="timeframe" class="no-print"> 
-
-			<div class="pure-menu pure-menu-horizontal">
-			    <ul class="pure-menu-list">
-			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/years">Recent years</a></li>
-			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/weeks">Recent weeks</a></li>
-			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/hours">Recent hours</a></li>
-			    </ul>
-			</div>
-		</div>
-
-
-		<div id="menu" class="no-print"> 
-			<div class="pure-menu pure-menu-horizontal">
-			    <ul class="pure-menu-list">
-			        <!--li class="pure-menu-item"><a class="pure-button button-pink" href="#!/coins">Select coins</a></li>
+	<div id="menu" class="no-print">
+		<div class="pure-menu pure-menu-horizontal">
+			<ul class="pure-menu-list">
+				<!--li class="pure-menu-item"><a class="pure-button button-pink" href="#!/coins">Select coins</a></li>
 			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/exchange">Select exchange</a></li-->
-			        <li class="pure-menu-item"><a class="pure-menu-link open-about" href="#!/about">About</a></li>
-			    </ul>
-			</div>
+				<li class="pure-menu-item">
+					<a class="pure-menu-link open-about" href="#!/about">About</a>
+				</li>
+			</ul>
 		</div>
+	</div>
 
-		<div id="modal-about" class="sidenav">
-			<a href="#" class="closebtn close-about">&times;</a>
-			<div>
-				<h1>About</h1>
-				<p>Cryptofiddle will help you see the development of crypto coins relative to each other.</p>
-				<p>Data kindly contributed by <a href="https://cryptocompare.com" target="_blank">cryptocompare.com</a></p>
-				<p>If you can see a possible improvement please dont be shy and provide a pull request for the <a href="https://github.com/mathiasrw/cryptofiddle" target="_blank">project repo on Github</a></p>
-			</div>
+
+	<div id="timeframe" class="no-print">
+		<div class="pure-menu pure-menu-horizontal">
+			<ul class="pure-menu-list">
+				<li class="pure-menu-item">
+					<a class="pure-menu-link" href="#!/years">Recent years</a>
+				</li>
+				<li class="pure-menu-item">
+					<a class="pure-menu-link" href="#!/weeks">Recent weeks</a>
+				</li>
+				<li class="pure-menu-item">
+					<a class="pure-menu-link" href="#!/hours">Recent hours</a>
+				</li>
+			</ul>
 		</div>
+	</div>
 
+
+	<div id="modal-about" class="sidenav no-print">
+		<a href="#" class="closebtn close-about">&times;</a>
+		<div>
+			<h1>About</h1>
+			<p>Cryptofiddle will help you see the development of crypto-coins relative to each other.</p>
+			<p>Data kindly contributed by
+				<a href="https://cryptocompare.com" target="_blank">cryptocompare.com</a>
+			</p>
+			<p>If you can see a possible improvement please dont be shy. Create an issue or provide a pull request in
+				<a href="https://github.com/mathiasrw/cryptofiddle" target="_blank">the github repo</a>
+			</p>
+		</div>
+	</div>
+
+	<div id="container">
 		<div id="graph"></div>
-		<script src="vendor.js"></script>
-		<script src="exe.ts"></script>
-	</body>
-</html>
+		<h5 id="watermark">Cryptofiddle.com</h5>
+	</div>
 
+	<script src="vendor.js"></script>
+	<script src="exe.ts"></script>
+</body>
+
+</html>
