--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -11,8 +11,6 @@
 
 <body>
 
-
-
 	<div id="loading" class="no-print"></div>
 
 	<h1 id="tagline" class="no-print">How did your crypto-coins perform?</h1>
@@ -21,7 +19,7 @@
 		<div class="pure-menu pure-menu-horizontal">
 			<ul class="pure-menu-list">
 				<!--li class="pure-menu-item"><a class="pure-button button-pink" href="#!/coins">Select coins</a></li>
-			        <li class="pure-menu-item"><a class="pure-menu-link" href="#!/exchange">Select exchange</a></li-->
+			        <!--li class="pure-menu-item"><a class="pure-menu-link" href="#!/exchange">Select exchange</a></li-->
 				<li class="pure-menu-item">
 					<a class="pure-menu-link open-about" href="#!/about">About</a>
 				</li>
@@ -60,6 +58,15 @@
 			</p>
 		</div>
 	</div>
+
+	<div id="modal-coins" class="sidenav no-print">
+			<a href="#" class="closebtn close-coins">&times;</a>
+			<div>
+				<h1>Select coins to show</h1>
+
+			</div>
+		</div>
+
 
 	<div id="container">
 		<div id="graph"></div>
