BSV for the win

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
 <body>
 
+
 	<div id="loading" class="no-print"></div>
 
 	<h1 id="tagline" class="no-print">How did your crypto-coins perform?</h1>
@@ -48,27 +49,31 @@
 	<div id="modal-about" class="sidenav no-print">
 		<a href="#" class="closebtn close-about">&times;</a>
 		<div>
-			<h1>About</h1>
-			<p>Cryptofiddle will help you see the development of crypto-coins relative to each other.</p>
+			<pre md>
+			# About
+			
+			Cryptofiddle will help you see the development of crypto-coins relative to each other.
 
-			<p>Select the coins to show by navigating to cryptofiddle.com/#!/coinA-coinB/.</p>
+			Select the coins to show by navigating to `www.CryptoFiddle.com/xxx-yyy-zzz`
 
-			<p>Data kindly contributed by
-				<a href="https://cryptocompare.com" target="_blank">cryptocompare.com</a>
-			</p>
-			<p>If you can see a possible improvement please dont be shy. Create an issue or provide a pull request in
-				<a href="https://github.com/mathiasrw/cryptofiddle" target="_blank">the github repo</a>
-			</p>
+			Data kindly contributed by [cryptocompare.com](https://cryptocompare.com)
+
+			If you can see a possible improvement please dont be shy. Create an issue or provide a pull request in
+				[the github repo](https://github.com/mathiasrw/cryptofiddle)
+			
+
+		</pre>
 		</div>
 	</div>
 
 	<div id="modal-coins" class="sidenav no-print">
-			<a href="#" class="closebtn close-coins">&times;</a>
-			<div>
-				<h1>Select coins to show</h1>
+		<a href="#" class="closebtn close-coins">&times;</a>
+		<div>
+			<h1>Select coins to show</h1>
 
-			</div>
 		</div>
+	</div>
+
 
 
 	<div id="container">
