--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
 	</div>
 
 	<script src="vendor.js"></script>
-	<script src="exe.ts"></script>
+	<script src="app.ts"></script>
 </body>
 
 </html>
